<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Adapter.BookDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:layout_alignParentTop="true"
        android:id="@+id/toolbar_detail"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@android:color/white"
        app:popupTheme="@style/ToolBarStyle.Event">
    </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:layout_marginTop="10dp"
            android:id="@+id/frame"
            android:layout_below="@+id/toolbar_detail"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/ic_launcher_background"
        android:id="@+id/book_detail_image"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <ProgressBar
            android:layout_gravity="center"
            android:visibility="visible"
            android:id="@+id/book_detail_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/conta"
            android:layout_below="@+id/frame"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:weightSum="10"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_book_name"
            android:layout_weight="9"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

            <TextView
                android:layout_margin="5dp"
                android:gravity="right"
                android:text="@string/age_limit"
                android:layout_weight="1"
                android:id="@+id/age_limit"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/conta"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_authors"
                android:text="@string/book"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/detail_mb"
                android:text="@string/detail_mbs"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:text="@string/summary"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_name"
                android:id="@+id/detail_annotation"
                android:textAlignment="textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:id="@+id/detail_length"
                android:text="@string/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/detail_hourss"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:id="@+id/detail_release"
                    android:text="@string/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:id="@+id/detail_narrated"
                    android:text="@string/narrated_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/hours"
                    android:background="@drawable/transparent_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:id="@+id/detail_genres"
                    android:text="@string/narrated_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/hours"
                    android:background="@drawable/transparent_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>